rsvp/policy-ast/src/test/resources/antlr/negative/illegal-shadow-1.cedarschema
entity Foo;
entity Foo;

// EXPECTED: Reference (R) Foo illegally shadowed